--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -7,6 +7,9 @@
 
     main .personagem .imagem {
         height: 85%;
+        display: flex;
+        width: 100%;
+        justify-content: space-around;
     }
 
     .conteudo {
@@ -15,6 +18,14 @@
         top: -20%;
         max-width: 100vw;
         padding: 30px;
+
+        @media screen and (max-width: 768px) {
+            .conteudo{
+                width: 100%;
+                flex-direction: column;
+            }
+            
+        }
 
     }
 
